# remote-paste

./: Cargo.toml  readme.md
src/: bot.rs  main.rs  paster.rs
