[package]
name = "remote-paste"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8.0"
winput = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.15"
anyhow = "1.0.44"
confy = "0.4.0"
serde_derive = "1.0.130"
serde = "1.0.130"
